# LUSIO

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
lusio_tests/data/: users.py
lusio_tests/models/pages/api/: authorization_page.py  item_cart_page.py  item_favorites_page.py  registration_page.py
lusio_tests/models/pages/ui/: add_item_cart_page.py  add_item_favorites_page.py  authorization_page.py  filter_item_material_page.py  registration_page.py  search_page.py  sorting_assortment_page.py
lusio_tests/utils/: allure_attach.py  api_helper.py
tests/api/: conftest.py  test_add_item_favorites.py  test_authorization.py  test_delete_item_favorites.py  test_registration.py
tests/ui/: conftest.py  test_add_item_cart.py  test_add_item_cart_with_api.py  test_add_item_favorites.py  test_authorization.py  test_filter_item.py  test_registration.py  test_search_item.py  test_sorting_assortment.py
